@@ -1,18 +1,30 @@
-## Getting Started
+# 🕒 Relógio Digital em JavaFX
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+Este projeto é uma aplicação de interface gráfica (GUI) desenvolvida em Java que exibe um relógio digital em tempo real. Ele demonstra o uso de componentes visuais do JavaFX e o gerenciamento de eventos temporais com `Timeline`.
 
-## Folder Structure
+## 🚀 Funcionalidades
 
-The workspace contains two folders by default, where:
+* **Atualização em Tempo Real:** O relógio atualiza os segundos automaticamente.
+* **Interface Estilizada:** Design moderno com fundo preto e fonte amarela em tamanho grande para fácil leitura.
+* **Precisão:** Utiliza a API `java.time` para capturar a hora exata do sistema.
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+---
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+## 🛠️ Tecnologias e Conceitos Utilizados
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+* **JavaFX (Stage, Scene, Label):** Para a construção da interface gráfica.
+* **Java Time API (LocalDateTime):** Para manipulação de datas e horas.
+* **JavaFX Animation (Timeline & KeyFrame):** Para criar o ciclo de atualização de 1 em 1 segundo sem travar a interface.
 
-## Dependency Management
+---
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+## 📋 Como Executar
+
+Como este projeto utiliza **JavaFX**, você precisa apontar para o diretório do seu SDK. Utilize os comandos abaixo no terminal:
+
+### Compilação
+```bash
+javac --module-path "C:\Java\javafx-sdk-22.0.1\lib" --add-modules javafx.controls ProjetoRelogioDigital.java
+```
+### Execução
+java --module-path "C:\Java\javafx-sdk-22.0.1\lib" --add-modules javafx.controls ProjetoRelogioDigital
